--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/Shared/_Layout.cshtml
@@ -37,10 +37,11 @@
             @RenderBody()
         </main>
     </div>
-
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>if (window.module) module = window.module;</script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
