--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/AnimalList.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/AnimalList.cshtml
@@ -24,7 +24,7 @@
         </form>
 
     </div>
-    <div class="sortingMenu">
+    <div class="sortingMenu column">
         <div class="sortOption Name">
             Name
         </div>
@@ -45,7 +45,7 @@
         @{
             foreach(Animal animal in Model.animals)
             {
-                <div class="animal @(animal.SpecialCare != "" ? "animalSpecialCare" : "")">
+                <div class="animal @(animal.SpecialCare != "" ? "animalSpecialCare" : "") column">
                     <div class="animalName">
                         @animal.Name
                     </div>
