--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
@@ -1,10 +1,12 @@
 ﻿#container {
+    min-width: 900px;
     height: 100%;
     box-sizing: border-box;
     padding: 5px;
     display: grid;
     grid-template-rows: 40px 40px 75% auto;
     align-items: center;
+    text-overflow: ellipsis;
 }
 
 .searchingForm {
@@ -24,21 +26,27 @@
     min-width: 250px;
 }
 
-.sortingMenu {
+.column {
     width: 100%;
     height: 30px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     box-sizing: border-box;
+}
+
+    .column > * {
+        height: 30px;
+        line-height: 30px;
+        padding-left: 5px;
+        border-right: 2px solid #F0F0F0;
+    }
+
+.sortingMenu {
     padding: 0 15px 0 0;
-    display: flex;
-    justify-content: space-between;
     color: #d3d3d3;
 }
 
     .sortingMenu > div {
-        width: 25%;
-        line-height: 30px;
-        padding-left: 5px;
-        border-right: 2px solid #F0F0F0;
         background-color: #4C6674;
     }
 
@@ -52,6 +60,7 @@
     }
         .sortingMenu div:last-child:hover {
             background-color: #4C6674;
+            cursor: auto;
         }
 
 .list {
@@ -64,11 +73,7 @@
 }
 
 .animal {
-    width: 100%;
-    height: 30px;
-    display: flex;
     margin-bottom: 5px;
-    justify-content: space-between;
     background-color: #d3d3d3;
     pointer-events: none;
 }
@@ -78,18 +83,18 @@
     }
 
     .animal > * {
-        width: 25%;
-        line-height: 30px;
-        padding-left: 5px;
-        border-right: 2px solid #F0F0F0;
         pointer-events: auto;
     }
     .animal *:last-child {
         display: grid;
         grid-auto-flow: column;
-        justify-content: space-evenly;
         border-right: none;
+        padding-left: 0;
     }
+    .animal form input {
+        width: 100%;
+    }
+
 .animalSpecialCare
 {
     background-color: red;
