--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/AnimalList.css
@@ -1,10 +1,12 @@
 ﻿#container {
+    min-width: 900px;
     height: 100%;
     box-sizing: border-box;
     padding: 5px;
     display: grid;
     grid-template-rows: 40px 40px calc(0.75*100vh) auto;
     align-items: center;
+    text-overflow: ellipsis;
 }
 
 .searchingForm {
@@ -28,7 +30,7 @@
     width: 100%;
     height: 30px;
     display: grid;
-    grid-template-columns: repeat(5, calc(100%/5));
+    grid-template-columns: repeat(5, 1fr);
     box-sizing: border-box;
 }
 
@@ -37,7 +39,6 @@
         line-height: 30px;
         padding-left: 5px;
         border-right: 2px solid #F0F0F0;
-        text-overflow: ellipsis;
     }
 
 .sortingMenu {
