--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/UnavailabilitySchedule.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/UnavailabilitySchedule.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 40px 20px auto auto;
+    grid-template-rows: 40px 40px 40px auto;
     justify-items: center;
     align-items: center;
 }
@@ -20,45 +20,8 @@
     text-align: center;
 }
 
-#calendar {
-    /*  border: 5px solid yellow;/
-                      display: grid;
-                      row-gap: 10px;
-                      grid-template-rows: 20px 20px 1fr;
-                  }
-
-                  #Month {
-                      font-family: 'Quicksand', sans-serif;
-                      color: white;
-                      font-size: 30px;
-                      text-align:center;
-                  }
-
-                  .weekdays {
-                      justify-items: center;
-                  }
-
-                      .weekdays abbr {
-                          text-decoration: none;
-                          font-family: 'Quicksand', sans-serif;
-                          color: white;
-                          font-size: 20px;
-                          text-align: center;
-                      }
-
-                      .weekdays li {
-                          width: 40px;
-                          display: flex;
-                          align-items: center;
-                          justify-content: center;
-                          list-style: none;
-                          margin-left: 0;
-                          /border: 5px solid lawngreen;*/
-}
-
 
 .month {
-    max-width: 50%;
     display: grid;
     grid-template-rows: repeat(7, 80px);
     grid-template-columns: repeat(7, 80px);
