--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -48,9 +48,10 @@ nav {
 .panel{
     margin-left: 80px;
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 10px auto;
-    grid-template-rows: 40px calc(100vh - 40px);
+    grid-template-rows: 40px auto;
 }
 
 .border {
@@ -63,6 +64,7 @@ nav {
 
 main {
     background-color: #F0F0F0;
+    min-height: calc(100vh - 40px);
 }
 
 #welcome {
