--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/StaticSchedule.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/StaticSchedule.css
@@ -69,13 +69,14 @@
     font: inherit;
     cursor: pointer;
     outline: inherit;
-
     min-width: 120px;
     width: 100%;
     height: 30px;
     display: block;
     background-color: #d3d3d3;
     margin: 2px 0;
+    font-size: 15px;
+    overflow: hidden;
 }
     .timeBlock:hover {
         background-color: #4C6674;
