--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
@@ -3,22 +3,6 @@
     src: url('../Fonts/OpenSans.ttf');
 }
 
-html {
-    font-size: 14px;
-}
-
-
-
-html {
-  position:relative;
-  height: 100%;
-  width:100%;
-}
-
-body {
-  margin-bottom: 0px;
-}
-
 * {
     padding: 0;
     margin: 0;
@@ -26,9 +10,17 @@ body {
     font-family: OpenSans;
 }
 
+html {
+    height: 100%;
+    width: 100%;
+    font-size: 14px;
+    position: relative;
+}
+
 body {
     display: flex;
     height: 100%;
+    min-width: 800px;
 }
 
 nav {
@@ -68,7 +60,7 @@ nav {
     width: 100%;
     display: grid;
     grid-template-columns: 10px auto;
-    grid-template-rows: 40px calc(100vh - 40px);
+    grid-template-rows: 40px auto;
 }
 
 .border {
@@ -81,6 +73,7 @@ nav {
 
 main {
     background-color: #F0F0F0;
+
 }
 
 #welcome {
