--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/StaticSchedule.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/StaticSchedule.css
@@ -49,6 +49,12 @@
 }
 
 .timeBlock {
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
     min-width: 120px;
     width: 100%;
     height: 30px;
@@ -57,12 +63,6 @@
     margin: 2px 0;
     font-size: 15px;
     overflow: hidden;
-
-    color: inherit;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    outline: inherit;
 }
     .timeBlock:hover {
         background-color: #4C6674;
