Static schedule displaying fix

--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
@@ -2,7 +2,7 @@
 @model ZooBazaar_ASP_NET.Pages.StaticScheduleModel
 @{
     ViewData["Title"] = "Schedule";
-    ViewData["TabName"] = "Schedule";
+    ViewData["TabName"] = "Static Schedule";
     ViewData["Css"] = "~/css/StaticSchedule.css";
 }
 @using ZooBazaar_DomainModels.Models;
