Employee list desktop done

--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/AnimalList.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/AnimalList.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Animal List";
     ViewData["TabName"] = "Animal List";
 
-    ViewData["Css"] = "~/css/Lists.css";
+    ViewData["Css"] = "~/css/animalLists.css";
 }
 
 <div id="container">
@@ -26,7 +26,6 @@
         <div class="sortOption Name">
             ID
         </div>
-
         <div class="sortOption Name">
             Name
         </div>
