--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -7,17 +7,24 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="@ViewData["Css"]" asp-append-version="true" />
     <link rel="stylesheet" href="~/ZooBazaar_ASP_NET.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <nav>
-        <a class="icon" asp-page="EmployeeSchedule">
-
-        </a>
         <a class="icon" asp-page="AnimalList">
-
+            <span class="material-symbols-outlined">
+                pets
+            </span>
+        </a>
+        <a class="icon" asp-page="EmployeeSchedule">
+            <span class="material-symbols-outlined">
+                date_range
+            </span>
         </a>
         <a class="icon" asp-page="UnavailabilitySchedule">
-
+            <span class="material-symbols-outlined">
+                free_cancellation
+            </span>
         </a>
     </nav>
     <div class="panel">
