--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/AnimalList.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/AnimalList.cshtml
@@ -65,7 +65,7 @@
         }
     </div>
     <div class="actionPanel">
-        <a type="button" asp-page="./AddAnimal" class="editBtn"> ADD</a>
+        <a type="button" asp-page="./AddAnimal" class="addBtn"> ADD</a>
     </div>
 </div>
 
