--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -77,3 +77,10 @@ main {
     align-items: center;
     font-size: 48px;
 }
+
+button {
+    border: 1px solid black;
+    background-color: #119B6C;
+    padding: 0 20px;
+    color: white;
+}
