--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/EmployeeList.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/EmployeeList.cshtml
@@ -49,7 +49,7 @@
         }
     </div>
     <div class="actionPanel">
-        <a type="button" asp-page="./EmployeeAdd" class="editBtn"> ADD</a>
+        <a type="button" asp-page="./EmployeeAdd" class="addBtn"> ADD</a>
     </div>
 </div>
 
