--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/animalLists.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/animalLists.css
@@ -10,7 +10,7 @@
 .searchingForm {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(5, 4fr 1fr);
+    grid-template-columns: repeat(5, 2fr 1fr);
     box-sizing: border-box;
     padding: 0 15px 0 0;
 }
@@ -83,14 +83,34 @@
     }
 
 .editBtn {
-    color: black;
+    height: 30px;
+    border: 1px solid black;
+    background-color: #119B6C;
+    color: white;
     text-decoration: none;
     text-align: center;
-    background-color: #637988;
+    box-sizing: border-box;
 }
 
     .editBtn:focus,
     .editBtn:hover {
-        background-color: #4C6674;
+        background-color: #0d7351;
+        color: black;
+    }
+
+.addBtn {
+    height: 30px;
+    border: 1px solid black;
+    background-color: #119B6C;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+    .addBtn:focus,
+    .addBtn:hover {
+        background-color: #0d7351;
         color: black;
     }
