--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/employeeLists.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/employeeLists.css
@@ -82,15 +82,36 @@
         border-right: none;
     }
 
+
 .editBtn {
-    color: black;
+    height: 30px;
+    border: 1px solid black;
+    background-color: #119B6C;
+    color: white;
     text-decoration: none;
     text-align: center;
-    background-color: #637988;
+    box-sizing: border-box;
 }
 
     .editBtn:focus,
     .editBtn:hover {
-        background-color: #4C6674;
+        background-color: #0d7351;
+        color: black;
+    }
+
+.addBtn {
+    height: 30px;
+    border: 1px solid black;
+    background-color: #119B6C;
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+    .addBtn:focus,
+    .addBtn:hover {
+        background-color: #0d7351;
         color: black;
     }
