--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
@@ -90,3 +90,10 @@ main {
     font-size: 48px;
 }
 
+button {
+    border: 1px solid black;
+    background-color: #119B6C;
+    padding: 0 20px;
+    color: white;
+}
+
