--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,18 @@
                 free_cancellation
             </span>
         </a>
+        <a class="icon" asp-page="UnavailabilitySchedule">
+            <span class="material-symbols-outlined">
+                free_cancellation
+            </span>
+        </a>
+        <div style="position: absolute;
+                    bottom: 0;
+                    width: 100%;
+                    height: auto;">
+            @Html.Partial("_LogoutPartial")
+        </div>
+
     </nav>
     <div class="panel">
         <div class="border"></div>
