--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/AnimalDetails.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/AnimalDetails.css
@@ -1,5 +1,5 @@
 ﻿.AnimalDetailsSite{
-    height:100%
+    height:100%;
     
 }
 #animalForm{
@@ -12,4 +12,8 @@
     margin-left: 20px;
     margin-top: 20px;
     border:none;
+}
+.delete{
+    margin-top:20px;
+    background-color:darkred;
 }
