Add chcek if Employee is avalible to Mnaual schedule

--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/ManualSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/ManualSchedule.cshtml
@@ -31,7 +31,7 @@
                 },
                 success: function (result) {
                     if (result.amountOfEmployees == "full") {
-                        alert("Employee is alredy added or There are enough Employees");
+                        alert("Employee is alredy added or There are enough Employees or Eployee is not avalible");
                     }else{
                         $("#amoutOfEmployees-" + i + "-" + j).text(result.amountOfEmployees);
                     }   
